test/cli/test/cel-preconditions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- disallow-host-path.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: disallow-host-path
  rule: host-path
  resources:
  - good-pod
  result: pass
- kind: Pod
  policy: disallow-host-path
  rule: host-path
  resources:
  - bad-pod
  result: fail
- kind: Pod
  policy: disallow-host-path
  rule: host-path
  resources:
  - skipped-pod
  result: skip
